--- a/services/web/package.json
+++ b/services/web/package.json
@@ -22,7 +22,8 @@
     "vue-markdown-render": "^2.1.1",
     "vue-router": "^4.2.4",
     "vuefire": "^3.1.17",
-    "vuex": "next"
+    "vuex": "next",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
