--- a/services/web/.gitignore
+++ b/services/web/.gitignore
@@ -17,6 +17,7 @@ dist-ssr
 !.vscode/extensions.json
 .idea
 .DS_Store
+**/.DS_Store
 *.suo
 *.ntvs*
 *.njsproj
@@ -26,3 +27,5 @@ dist-ssr
 # Private
 .env
 keys/*
+
+
