--- a/services/server/requirements.txt
+++ b/services/server/requirements.txt
@@ -9,6 +9,7 @@ beautifulsoup4==4.12.2
 cachetools==5.3.2
 certifi==2023.7.22
 charset-normalizer==3.3.0
+deprecation==2.1.0
 distro==1.8.0
 Django==4.2.6
 django-cors-headers==4.2.0
@@ -24,6 +25,7 @@ google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.0
 google-cloud-secret-manager==2.16.4
 googleapis-common-protos==1.61.0
+gotrue==2.5.4
 grpc-google-iam-v1==0.12.7
 grpcio==1.59.3
 grpcio-status==1.59.3
@@ -37,23 +39,33 @@ multidict==6.0.4
 oauthlib==3.2.2
 openai==1.35.7
 packaging==23.2
+postgrest==0.16.8
 proto-plus==1.22.3
 protobuf==4.25.1
+psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pydantic==2.4.2
 pydantic_core==2.10.1
 pyparsing==3.1.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.0
 pytz==2023.3.post1
+realtime==1.0.6
 requests==2.31.0
 requests-oauthlib==1.3.1
 rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 soupsieve==2.5
 sqlparse==0.4.4
+storage3==0.7.6
+StrEnum==0.4.15
+supabase==2.5.1
+supafunc==0.4.6
 tqdm==4.66.1
-typing_extensions==4.8.0
+typing_extensions==4.12.2
 uritemplate==4.1.1
 urllib3==2.0.6
+websockets==12.0
 yarl==1.9.2
