feat: Introduce PWA install prompt, shortcuts, and Firebase Cloud Messaging for VIP order notifications.

--- a/firebase.json
+++ b/firebase.json
@@ -5,6 +5,20 @@
     "rules": "firestore.rules",
     "indexes": "firestore.indexes.json"
   },
+  "hosting": {
+    "public": "services/web/dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  },
   "functions": [
     {
       "source": "functions",
