feat: Implement iOS-specific PWA installation instructions, update theme color, Firebase API key, and manifest short name.

--- a/services/web/public/manifest.json
+++ b/services/web/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "Pizza App",
-  "short_name": "Pizza",
+  "short_name": "Pizza 🥭",
   "start_url": ".",
   "display": "fullscreen",
   "orientation": "portrait",
